// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai/stream-object > basic 1`] = `
{
  "recipe": {},
}
`;

exports[`@xsai/stream-object > basic 2`] = `
{
  "recipe": {
    "ingredients": [],
  },
}
`;

exports[`@xsai/stream-object > basic 3`] = `
{
  "recipe": {
    "ingredients": [
      {},
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 4`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 5`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 6`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 7`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "ste",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 8`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 9`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 10`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 11`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 12`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 13`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 14`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 15`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 16`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "ol",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 17`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 18`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 19`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 20`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": ">",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 21`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> ",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 22`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 23`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 24`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 25`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kos",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 26`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 27`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 28`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 29`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": ">",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 30`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> ",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 31`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 32`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 33`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 34`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 35`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 36`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 37`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 38`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 39`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 40`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 41`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 42`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 43`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": "",
  },
}
`;

exports[`@xsai/stream-object > basic 44`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous",
  },
}
`;

exports[`@xsai/stream-object > basic 45`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-V",
  },
}
`;

exports[`@xsai/stream-object > basic 46`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide",
  },
}
`;

exports[`@xsai/stream-object > basic 47`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak",
  },
}
`;

exports[`@xsai/stream-object > basic 48`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with",
  },
}
`;

exports[`@xsai/stream-object > basic 49`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb",
  },
}
`;

exports[`@xsai/stream-object > basic 50`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter",
  },
}
`;

exports[`@xsai/stream-object > basic 51`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
  },
}
`;

exports[`@xsai/stream-object > basic 52`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [],
  },
}
`;

exports[`@xsai/stream-object > basic 53`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 54`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 55`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step ",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 56`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 57`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1:",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 58`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 59`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 60`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 61`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 62`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 63`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 64`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "P",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 65`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPre",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 66`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 67`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 68`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 69`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-v",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 70`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 71`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 72`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 73`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to ",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 74`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 75`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 76`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 77`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 78`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 79`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 80`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 81`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 82`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "I",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 83`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iter",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 84`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 85`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 86`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 87`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 88`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 89`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 90`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 91`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt.",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 92`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. G",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 93`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 94`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 95`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 96`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 97`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 98`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 99`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 100`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "He",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 101`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 102`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 103`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 104`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 105`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 106`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a pre",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 107`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a prehe",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 108`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 109`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 110`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 111`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 112`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 113`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 114`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "W",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 115`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 116`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap ste",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 117`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 118`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 119`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 120`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment,",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 121`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, season",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 122`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 123`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 124`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly",
    ],
  },
}
`;

exports[`@xsai/stream-object > basic 125`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly.",
    ],
  },
}
`;
